Iniciando Visualização de Comentários

--- a/CadastroConteudos.html
+++ b/CadastroConteudos.html
@@ -51,6 +51,12 @@
               <textarea class="form-control" name="descricao" id="descricaoInput" rows="4"></textarea>
             </div>
           </div>
+          <button type="submit" value="Enviar" class="btn btn-danger" >
+            <i class="bi bi-send"></i> Enviar
+              </button>
+            <button type="reset" value="Limpar" class="btn btn-danger btn-secondary" data-bs-container="body" data-toggle="popover" data-bs-placement="bottom" data-toggle="popover"   data-bs-content="Campos apagados">
+                <i class="bi bi-x-circle"></i> Limpar
+            </button>
         </div>
       </div>
     </form>
